k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: firewall-audit
  namespace: firewall-audit
spec:
  selector:
    app: firewall-audit
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
